# pydoc_fork

./: .env_example  .gitattributes  .gitignore  .pre-commit-config.yaml  .pydoctest.json  .pylintrc  .pylintrc_spell  .pylintrc_tests  .safety-policy.yml  AGENTS.md  CHANGELOG.md  CONTRIBUTING_MANUAL_TESTING.md  Makefile  Pipfile  README.md  basic_help.sh  build.py  junit.xml  make_docs.sh  mkdocs.yml  private_dictionary.txt  pyproject.py  pyproject.toml  pyproject_621.toml  tox.ini
.config/: .pylintrc  .pynt  requirements-dev.txt  requirements.txt  requirements_for_safety.txt  run_with_docker.sh
.config/.build_state/: file_hash_installs.txt  last_change_compile_py.txt  last_change_count_lines_of_code.txt  last_change_detect_secrets.txt  last_change_formatting.txt  last_change_pyupgrade.txt  last_change_vulture.txt
.github/workflows/: build.yml  create_draft_release.yml  publish_to_pypi.yml  release.yml  tox.yml
doc_self_dark/: style.css
docs/: CHANGES.md  TODO.md  contributing.md  feature_clusters.md  index.html  motivation.md  prior_art.md  pydoc_fork.__about__.html  pydoc_fork.__main__.html  pydoc_fork.cli.html  pydoc_fork.commands.html  pydoc_fork.gui.html  pydoc_fork.html  pydoc_fork.inspector.custom_types.html  pydoc_fork.inspector.html  pydoc_fork.inspector.module_utils.html  pydoc_fork.inspector.path_utils.html  pydoc_fork.inspector.utils.html  pydoc_fork.reporter.format_class.html  pydoc_fork.reporter.format_data.html  pydoc_fork.reporter.format_module.html  pydoc_fork.reporter.format_other.html  pydoc_fork.reporter.format_page.html  pydoc_fork.reporter.format_routine.html  pydoc_fork.reporter.formatter_html.html  pydoc_fork.reporter.html  pydoc_fork.reporter.html_repr_class.html  pydoc_fork.reporter.inline_styles.html  pydoc_fork.reporter.jinja_code.html  pydoc_fork.reporter.rst_support.html  pydoc_fork.reporter.string_utils.html  pydoc_fork.reporter.themes.html  pydoc_fork.settings.html  style.css  usage.md  workflows.md
docs/docs_mkdocstrings/: 404.html  index.html  objects.inv  sitemap.xml
docs/docs_portray/: 404.html  index.html  sitemap.xml
docs/docs_pycco/: custom_types.html  format_class.html  format_data.html  format_other.html  format_page.html  html_repr_class.html  index.html  inline_styles.html  module_utils.html  path_utils.html
docs/docs_pydoc_fork/: pydoc_fork.__main__.html  pydoc_fork.cli_code.html  pydoc_fork.commands.html  pydoc_fork.custom_types.html  pydoc_fork.format_class.html  pydoc_fork.format_data.html  pydoc_fork.format_module.html  pydoc_fork.format_routine.html  pydoc_fork.formatter_html.html  pydoc_fork.html  pydoc_fork.html_repr_class.html  pydoc_fork.inspector.custom_types.html  pydoc_fork.inspector.html  pydoc_fork.inspector.module_utils.html  pydoc_fork.inspector.path_utils.html  pydoc_fork.inspector.utils.html  pydoc_fork.module_utils.html  pydoc_fork.reporter.format_class.html  pydoc_fork.reporter.format_data.html  pydoc_fork.reporter.format_module.html  pydoc_fork.reporter.format_other.html  pydoc_fork.reporter.format_page.html  pydoc_fork.reporter.format_routine.html  pydoc_fork.reporter.formatter_html.html  pydoc_fork.reporter.html  pydoc_fork.reporter.html_repr_class.html  pydoc_fork.reporter.inline_styles.html  pydoc_fork.reporter.jinja_code.html  pydoc_fork.reporter.rst_support.html  pydoc_fork.reporter.string_utils.html  pydoc_fork.settings.html  pydoc_fork.string_utils.html
docs/docs_pydoctor/: __init__ 0.html  __init__.html  classIndex.html  custom_types.TypeLike.html  custom_types.html  format_class.html  format_data.html  format_module.html  format_other.html  format_page.html  format_routine.html  formatter_html.MarkupSyntax.html  formatter_html.html  html_repr_class.HTMLRepr.html  html_repr_class.html  index.html  inline_styles.html  jinja_code.html  moduleIndex.html  module_utils.ImportTimeError.html  module_utils.html  nameIndex.html  objects.inv  path_utils.html  pydoc_fork.all_found.html  pydoc_fork.format_data.html  pydoc_fork.inline_styles.html  pydoc_fork.jinja_code.html  pydoc_fork.module_utils.html  pydoc_fork.path_utils.html  pydoc_fork.string_utils.html  pydoc_fork.utils.html  rst_support.HTMLFragmentTranslator.html  rst_support.html  string_utils.html  undoccedSummary.html  utils.html
docs/docs_sphinx/: .buildinfo  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  pydoc_fork.html  search.html  searchindex.js
docs_all_styles/: index.html
docs_all_styles/docs_pycco/: __init__.html  __main__.html  all_found.html  cli_code.html  format_module.html  format_routine.html  formatter_html.html  jinja_code.html  string_utils.html  utils.html
docs_all_styles/docs_pydoc_fork/: pydoc_fork.format_other.html  pydoc_fork.format_page.html  (+3 more)
docs_md/: index.md
navio_tasks/: settings.py
pydoc_fork/: __about__.py  __init__.py  __main__.py  all_found.py  cli.py  cli_code.py  commands.py  custom_types.py  format_class.py  format_data.py  format_module.py  format_other.py  format_page.py  format_routine.py  formatter_class.py  formatter_html.py  gui.py  html_generator.py  html_repr_class.py  inline_styles.py  jinja_code.py  main.py  module_scanner_class.py  module_utils.py  path_utils.py  rst_support.py  settings.py  string_utils.py  ui_code.py  utils.py
pydoc_original_ref/: pydoc311.py
rtd_docs/: CHANGES.md  TODO.md  contributing.md  feature_clusters.md  motivation.md  usage.md  workflows.md
scripts/: basic_help.sh  dogfood.sh  stress_test.py
spec/: ui_improvement_plan.md
sphinx_docs/: conf.py  index.rst  modules.rst  pydoc_fork.inspector.rst  pydoc_fork.reporter.rst  pydoc_fork.rst  start.sh
temp_docs/: style.css
test/: pydoc_mod.py  pydocfodder.py  test_argv_mocking.py  test_cli.py  test_document_single_files.py  test_fix_links_to_stdlib.py  test_formatter_html.py  test_general.py  test_is_that_html5.py  test_live_generation.py  test_main.py  test_main_options.py  test_module_utils.py  test_path_utils.py  test_rst_support.py  test_settings_config.py  test_skip_main.py  test_string_utils.py  test_utils.py  test_variety.py  tox_banner.py
tests/: test_general.py
(+140 files in other folders)
