[project]
dependencies = ["python >=3.8, <4", "docopt-ng >=0.9.0, <1", "jinja2 >=3.1.4, <4", "markdown >=3.5.2, <4", "docutils ==0.20.1", "tomli >=2.0.1, <3", "typing_extensions"]

[project.optional-dependencies]
dev = ["coverage", "pytest >=6.0.1", "pytest-cov >=2.10.1", "pytest-xdist >=2.1.0", "tox", "pylint >=3.0.2", "mypy", "types-docutils", "types-Markdown", "python-dotenv ==0.11.0", "html5lib", "proselint >=0.13.0", "interrogate >=1.5.0", "pydoctest >=0.1.22", "pdoc3 >=0.10.0", "mdformat >=0.7.17", "linkcheckmd >=1.4.0", "codespell >=2.2.6", "pyenchant >=3.2.2", "metametameta", "tomlkit"]

[tool.poetry]
name = "pydoc_fork"
version = "3.3.0"
description = "Fork of cpython's pydoc module to do just html document generation"
authors = ["Matthew Martin <matthewdeanmartin@gmail.com>"]
keywords = ["pydoc", "html documentation"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
include = [
    "pydoc_fork/**/*.py",
    "pydoc_fork/**/*.md",
    "pydoc_fork/**/*.txt",
    "pydoc_fork/**/*.html",
    "pydoc_fork/**/*.jinja",
]
exclude = [
]
license = "MIT"
readme = "README.md"
repository = "https://github.com/matthewdeanmartin/pydoc_fork"
homepage = "https://github.com/matthewdeanmartin/pydoc_fork"
documentation = "https://github.com/matthewdeanmartin/pydoc_fork"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/matthewdeanmartin/pydoc_fork/issues"
"Change Log" = "https://github.com/matthewdeanmartin/pydoc_fork/blob/main/CHANGES.md"

[tool.poetry.scripts]
pydoc_fork = 'pydoc_fork.__main__:main'

[tool.poetry.dependencies]
# markdown is <4
python = ">=3.8, <4"

# cli
docopt-ng = ">=0.9.0, <1"

# ui
jinja2 = ">=3.1.4, <4"
markdown = ">=3.5.2, <4"
# docutils dropped 3.8 for later versions
docutils = "==0.20.1"

# loads pyproject.toml
tomli = ">=2.0.1, <3"

# backports of type annotations?
typing_extensions = "*"

[tool.poetry.dev-dependencies]
# testing
coverage = "*"
pytest = ">=6.0.1"
pytest-cov = ">=2.10.1"
pytest-xdist = ">=2.1.0"
tox = "*"

# linting
pylint = ">=3.0.2"

# types
mypy = "*"
types-docutils = "*"
types-Markdown = "*"

# secrets
python-dotenv = "==0.11.0"

# UI assertions
html5lib = "*"

# docs
proselint = ">=0.13.0"
interrogate = ">=1.5.0"
pydoctest = ">=0.1.22"
pdoc3 = ">=0.10.0"
mdformat = ">=0.7.17"
linkcheckmd = ">=1.4.0"
codespell = ">=2.2.6"
pyenchant = ">=3.2.2"
metametameta = "*"

# scripts
tomlkit = "*"


[tool.black]
line-length = 88
target-version = ['py37']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "tests",
]
junit_family = "xunit1"
norecursedirs = ["vendor", "scripts"]
# don't know how to do this in toml
#addopts = "--strict-markers"
#markers =
#	slow: marks tests as slow (deselect with '-m "not slow"')
#	fast: marks tests as fast (deselect with '-m "not fast"')

[tool.isort]
default_section = "THIRDPARTY"
force_grid_wrap = 0
include_trailing_comma = true
known_first_party = ["pydoc_fork"]
line_length = 88
multi_line_output = 3
use_parentheses = true

[tool.pydoc_fork]
PREFER_INTERNET_DOCUMENTATION = false
DOCUMENT_INTERNALS = false
SKIP_MODULES = ["typing"]
ONLY_NAMED_AND_SUBS = false

[tool.portray]
output_dir = "doc/docs_portray"

[tool.bonded]
search_path = 'pydoc_fork/'
pyproject = 'pyproject.toml'
exclude = ['__pycache__/']
