[project]
name = "pydoc_fork"
version = "3.4.0"
description = "Fork of cpython's pydoc module to do just html document generation"
readme = "README.md"
authors = [{ name = "Matthew Martin", email = "matthewdeanmartin@gmail.com" }]
keywords = ["pydoc", "html documentation"]
license = "MIT"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "docopt-ng>=0.9.0,<1",
    "jinja2>=3.1.4,<4",
    "markdown>=3.5.2,<4",
    "docutils==0.20.1",
    "tomli>=2.0.1,<3",
    "typing_extensions",
]

[project.urls]
Homepage = "https://github.com/matthewdeanmartin/pydoc_fork"
Documentation = "https://pydoc-fork.readthedocs.io/en/latest/"
Repository = "https://github.com/matthewdeanmartin/pydoc_fork"
Changelog = "https://github.com/matthewdeanmartin/pydoc_fork/blob/main/CHANGELOG.md"
"Bug Tracker" = "https://github.com/matthewdeanmartin/pydoc_fork/issues"

[project.scripts]
pydoc_fork = "pydoc_fork.__main__:main"
pydoc = "pydoc_fork.cli:main"

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pydoc_fork"]
include = [
    "pydoc_fork/**/*.py",
    "pydoc_fork/**/*.md",
    "pydoc_fork/**/*.txt",
    "pydoc_fork/**/*.html",
    "pydoc_fork/**/*.jinja",
    "/README.md",
    "LICENSE",
]

[tool.hatch.build.targets.sdist]
include = ["/README.md", "LICENSE", "/pydoc_fork", "/test"]

[dependency-groups]
# Minimal group for running the test suite + mypy across every supported Python
# version (including pre-release builds). Deliberately excludes the heavy lint/
# docs/security toolchain — notably import-linter, whose `grimp`/`pydantic-core`
# deps require a Rust toolchain to build on Python versions without prebuilt
# wheels (e.g. 3.15 beta). pydoc_fork itself has no pydantic dependency.
test = [
    "pytest>=8.4.0",
    "pytest-cov>=6.0.0",
    "pytest-xdist>=3.5.0",
    "pytest-randomly>=3.15.0",
    "pytest-sugar>=0.9.7",
    "pytest-mock>=3.14.0",
    "pytest-timeout>=2.4.0",
    "hypothesis>=6.100.0",
    "html5lib",
    "mypy>=1.18.0",
    "types-docutils",
    "types-Markdown",
]
dev = [
    { include-group = "test" },
    "bandit>=1.9.4",
    "black>=26.0.0",
    "isort>=6.0.0",
    "jiggle-version>=2.1.0",
    "codespell>=2.4.1",
    "mdformat>=1.0.0",
    "metametameta>=0.1.5",
    "pylint[spelling]>=4.0.0",
    "ruff>=0.12.0",
    "troml-dev-status>=0.6.0",
    "pre-commit>=4.0.0",
    "pip-audit>=2.7.0",
    "tox>=4.0",
    "tox-uv>=1.0",
    "gha-update>=0.1.0; python_version >= '3.12'",
    "pyyaml>=6.0",
    "yamlfix>=1.19.0",
    "interrogate>=1.5.0",
    "linkcheckmd>=1.4.0",
    "pyenchant>=3.2.2",
    "pydoctest==0.2.1",
    "pdoc3>=0.10.0",
    "mkdocs>=1.6.0",
    "mkdocstrings[python]>=0.26.0",
    "git2md>=0.1.0",
    "pyclean>=3.0.0",
    "python-dotenv>=0.11.0",
    "tomlkit",
    # dead code analysis (advisory)
    "vulture>=2.11",
    "deadcode>=2.4.0",
    # API surface / doc checks
    "griffe>=1.0.0",
    "pydoclint>=0.8.0",
    # advisory / exploratory tools
    "refurb>=2.0.0",
    "crosshair-tool>=0.0.80",
    "deptry>=0.20.0",
    "import-linter>=2.0",
    "keepachangelog-manager>=4.0.0",
]

[tool.uv]
default-groups = ["dev"]
constraint-dependencies = [
    "idna>=3.15",
    "pymdown-extensions>=10.21.3",
]
universal = true

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["test"]
addopts = "-q --timeout=60"
norecursedirs = ["vendor", "scripts", "dist", "build"]
markers = [
    "slow: performance benchmarks (run with -m slow)",
    "integration: integration tests (run with -m integration)",
]
junit_family = "xunit1"

[tool.black]
line-length = 120
target-version = ["py310"]
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[tool.isort]
profile = "black"
line_length = 120
py_version = 310
skip_gitignore = true
known_first_party = ["pydoc_fork"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
check_untyped_defs = true

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = [
    "B",   # bugbear
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "UP",  # pyupgrade
    "SIM", # simplify
    "RUF", # ruff-specific
    "W",   # pycodestyle warnings
]
ignore = [
    "E501",   # line too long (black handles this)
    "UP007",  # use X | Y for union (3.9 compat)
    "W291",   # trailing whitespace (black owns blank-line formatting)
    "W293",   # whitespace on blank line (black owns blank-line formatting)
]

[tool.ruff.lint.per-file-ignores]
"test/*.py" = ["B011", "S101"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.bandit]
exclude_dirs = ["test"]
skips = ["B101", "B404", "B603"]

[tool.coverage.report]
exclude_also = [
    "def __repr__",
    "if self\\.debug",
    "raise AssertionError",
    "raise NotImplementedError",
    "except ImportError",
    "except ModuleNotFoundError",
    "if 0:",
    "if __name__ == .__main__.:",
    "@(abc\\.)?abstractmethod",
]

[tool.importlinter]
root_packages = ["pydoc_fork"]

[tool.pydoc_fork]
PREFER_DOCS_PYTHON_ORG = false
DOCUMENT_INTERNALS = false
SKIP_MODULES = ["typing"]
ONLY_NAMED_AND_SUBS = false
